--- a/AbstractFactory/AbstractFactory.csproj
+++ b/AbstractFactory/AbstractFactory.csproj
@@ -44,10 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractFactory.cs" />
-    <Compile Include="Blue.cs" />
-    <Compile Include="Color.cs" />
-    <Compile Include="ColorFactory.cs" />
     <Compile Include="FactoryProducer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,15 +51,22 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Green.cs" />
+    <Compile Include="Meal.cs" />
+    <Compile Include="MealFactory.cs" />
+    <Compile Include="Osaka.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rectangle.cs" />
-    <Compile Include="Red.cs" />
-    <Compile Include="Shape.cs" />
-    <Compile Include="ShapeFactory.cs" />
-    <Compile Include="Square.cs" />
-    <Compile Include="Triangle.cs" />
+    <Compile Include="SushiMealFactory.cs" />
+    <Compile Include="Tokyo.cs" />
+    <Compile Include="WokMealFactory.cs" />
+    <Compile Include="WrapMealFactory.cs" />
+    <Compile Include="Yala.cs" />
+    <Compile Include="Lampang.cs" />
+    <Compile Include="Bangkok.cs" />
+    <Compile Include="Rhodes.cs" />
+    <Compile Include="Veria.cs" />
+    <Compile Include="Athens.cs" />
+    <Compile Include="Yamagata.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
